--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -2,7 +2,7 @@ name: CI/CD Pipeline
 
 on:
   push:
-    branches: [master]
+    branches: [main]
 
 env:
   IMAGE_TAG: ${{ github.run_number }}
@@ -27,7 +27,7 @@ jobs:
       - name: 🔐 Authenticate with GCP
         uses: google-github-actions/auth@v2
         with:
-          credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
+          credentials_json: "${{ secrets.GCP_CREDENTIALS }}"
 
       - name: ⚙️ Configure Docker to use Artifact Registry
         run: |
@@ -41,21 +41,19 @@ jobs:
 
       - name: 🧱 Build and push Backend Docker image
         run: |
-         docker build \
-         --no-cache \
-         -t ${{ vars.GKE_REGION }}-docker.pkg.dev/${{ vars.GCP_PROJECT_ID }}/weather-app/weather-backend:${{ env.IMAGE_TAG }} backend
-         docker push ${{ vars.GKE_REGION }}-docker.pkg.dev/${{ vars.GCP_PROJECT_ID }}/weather-app/weather-backend:${{ env.IMAGE_TAG }}
-
+          docker build \
+          --no-cache \
+          -t ${{ vars.GKE_REGION }}-docker.pkg.dev/${{ vars.GCP_PROJECT_ID }}/weather-app/weather-backend:${{ env.IMAGE_TAG }} backend
+          docker push ${{ vars.GKE_REGION }}-docker.pkg.dev/${{ vars.GCP_PROJECT_ID }}/weather-app/weather-backend:${{ env.IMAGE_TAG }}
 
       - name: 🎨 Build and push Frontend Docker image
         run: |
-         docker build \
-         --no-cache \
-         --build-arg VITE_API_URL=${{ vars.VITE_NEWS_API_URL }} \
-         -t ${{ vars.GKE_REGION }}-docker.pkg.dev/${{ vars.GCP_PROJECT_ID }}/weather-app/weather-frontend:${{ env.IMAGE_TAG }} \
-         frontend
-         docker push ${{ vars.GKE_REGION }}-docker.pkg.dev/${{ vars.GCP_PROJECT_ID }}/weather-app/weather-frontend:${{ env.IMAGE_TAG }}
-
+          docker build \
+          --no-cache \
+          --build-arg VITE_API_URL=${{ vars.VITE_NEWS_API_URL }} \
+          -t ${{ vars.GKE_REGION }}-docker.pkg.dev/${{ vars.GCP_PROJECT_ID }}/weather-app/weather-frontend:${{ env.IMAGE_TAG }} \
+          frontend
+          docker push ${{ vars.GKE_REGION }}-docker.pkg.dev/${{ vars.GCP_PROJECT_ID }}/weather-app/weather-frontend:${{ env.IMAGE_TAG }}
 
       - name: 📝 Update manifests with full image lines
         run: |
@@ -69,5 +67,3 @@ jobs:
           git add manifests/deployment-*.yaml
           git commit -m "🚀 Update image tags to $IMAGE_TAG for ArgoCD auto-deploy" || echo "No changes to commit"
           git push --force https://x-access-token:${{ secrets.GH_PAT }}@github.com/${{ github.repository }}.git
-
-
